--- a/LletraMovil/Views/EndRegisterPage.xaml
+++ b/LletraMovil/Views/EndRegisterPage.xaml
@@ -19,7 +19,7 @@
                     <ColumnDefinition Width="*" />
                 </Grid.ColumnDefinitions>
 
-                <Image Source="background.png" Grid.Column="0" Grid.Row="0" Grid.RowSpan="3" HorizontalOptions="FillAndExpand" Aspect="AspectFill"/>
+                <Image Source="{Binding imgBackground}" Grid.Column="0" Grid.Row="0" Grid.RowSpan="3" HorizontalOptions="FillAndExpand" Aspect="AspectFill"/>
                 <StackLayout>
                     <StackLayout Grid.Row="0" Grid.Column="0">
                         <Label Text="Registro exitoso" FontSize="Title" HorizontalOptions="FillAndExpand" HorizontalTextAlignment="Center" 
