--- a/LletraMovil/Views/IntroPage.xaml
+++ b/LletraMovil/Views/IntroPage.xaml
@@ -8,9 +8,9 @@
 
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*" />
-            </Grid.ColumnDefinitions>   
+            </Grid.ColumnDefinitions>
 
-            <Image Source="background.png" Grid.Column="0" Grid.Row="0" Aspect="AspectFill"/>
+            <Image Source="{Binding imgBackground}" Grid.Column="0" Grid.Row="0" Aspect="AspectFill"/>
 
             <Image Source="lletra_logo_sin_descripcion_blanco.png" Grid.Column="0" Grid.Row="0" HorizontalOptions="Center" VerticalOptions="Center" WidthRequest="200"/>
 
